manifests/dev/jupyterhub/Deployment-jupyterhub-hub.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: hub
    app.kubernetes.io/instance: jupyterhub
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: jupyterhub
    app.kubernetes.io/version: 4.1.6
    helm.sh/chart: jupyterhub-8.1.5
  name: jupyterhub-hub
  namespace: jupyterhub
spec:
  selector:
    matchLabels:
      app.kubernetes.io/component: hub
      app.kubernetes.io/instance: jupyterhub
      app.kubernetes.io/name: jupyterhub
  strategy:
    rollingUpdate: {}
    type: RollingUpdate
  template:
    metadata:
      annotations:
        checksum/hub-config: b266f3a95c56e2ad28d0f258380788b1e21dc857e8ddb4a07fc85eea152a6c42
        checksum/hub-secret: 75c7e3018c4225190f90e5f2346b30f04c627ffe256d7af41d68e9fa9e4ec6d3
      labels:
        app.kubernetes.io/component: hub
        app.kubernetes.io/instance: jupyterhub
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: jupyterhub
        app.kubernetes.io/version: 4.1.6
        helm.sh/chart: jupyterhub-8.1.5
        hub.jupyter.org/network-access-proxy-api: "true"
        hub.jupyter.org/network-access-proxy-http: "true"
        hub.jupyter.org/network-access-singleuser: "true"
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/component: hub
                    app.kubernetes.io/instance: jupyterhub
                    app.kubernetes.io/name: jupyterhub
                topologyKey: kubernetes.io/hostname
              weight: 1
      automountServiceAccountToken: true
      containers:
        - args:
            - --config
            - /etc/jupyterhub/jupyterhub_config.py
            - --upgrade-db
          command:
            - jupyterhub
          image: docker.io/bitnami/jupyterhub:4.1.6-debian-12-r15
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 30
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: http
            timeoutSeconds: 3
          name: hub
          ports:
            - containerPort: 8081
              name: http
          readinessProbe:
            failureThreshold: 30
            httpGet:
              path: /hub/health
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 3
          resources:
            limits:
              cpu: 750m
              ephemeral-storage: 2Gi
              memory: 768Mi
            requests:
              cpu: 500m
              ephemeral-storage: 50Mi
              memory: 512Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            privileged: false
            readOnlyRootFilesystem: true
            runAsGroup: 1001
            runAsNonRoot: true
            runAsUser: 1001
            seLinuxOptions: {}
            seccompProfile:
              type: RuntimeDefault
          startupProbe:
            failureThreshold: 30
            httpGet:
              path: /hub/health
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 3
          volumeMounts:
            - mountPath: /tmp
              name: empty-dir
              subPath: tmp-dir
            - mountPath: /etc/jupyterhub/jupyterhub_config.py
              name: config
              subPath: jupyterhub_config.py
            - mountPath: /etc/jupyterhub/z2jh.py
              name: config
              subPath: z2jh.py
            - mountPath: /usr/local/etc/jupyterhub/secret/
              name: secret
      securityContext:
        fsGroup: 1001
        fsGroupChangePolicy: Always
        supplementalGroups: []
        sysctls: []
      serviceAccountName: jupyterhub-hub
      volumes:
        - emptyDir: {}
          name: empty-dir
        - configMap:
            name: jupyterhub-hub
          name: config
        - name: secret
          secret:
            secretName: jupyterhub-hub
