manifests/dev/jupyterhub/Service-jupyterhub-hub.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: hub
    app.kubernetes.io/instance: jupyterhub
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: jupyterhub
    app.kubernetes.io/version: 4.1.6
    helm.sh/chart: jupyterhub-8.1.5
  name: jupyterhub-hub
  namespace: jupyterhub
spec:
  ports:
    - name: http
      port: 8081
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/component: hub
    app.kubernetes.io/instance: jupyterhub
    app.kubernetes.io/name: jupyterhub
  sessionAffinity: None
  type: ClusterIP
