manifests/dev/jupyterhub/Service-jupyterhub-proxy-api.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: proxy
    app.kubernetes.io/instance: jupyterhub
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: jupyterhub
    app.kubernetes.io/version: 4.6.3
    helm.sh/chart: jupyterhub-8.1.5
  name: jupyterhub-proxy-api
  namespace: jupyterhub
spec:
  ports:
    - name: http
      port: 8001
      protocol: TCP
      targetPort: api
  selector:
    app.kubernetes.io/component: proxy
    app.kubernetes.io/instance: jupyterhub
    app.kubernetes.io/name: jupyterhub
  sessionAffinity: None
  type: ClusterIP
