manifests/dev/jupyterhub/Service-jupyterhub-proxy-public.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: proxy
    app.kubernetes.io/instance: jupyterhub
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: jupyterhub
    app.kubernetes.io/version: 4.6.3
    helm.sh/chart: jupyterhub-8.1.5
  name: jupyterhub-proxy-public
  namespace: jupyterhub
spec:
  externalTrafficPolicy: Cluster
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/component: proxy
    app.kubernetes.io/instance: jupyterhub
    app.kubernetes.io/name: jupyterhub
  sessionAffinity: None
  type: LoadBalancer
