manifests/dev/jupyterhub/NetworkPolicy-jupyterhub-proxy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/component: proxy
    app.kubernetes.io/instance: jupyterhub
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: jupyterhub
    app.kubernetes.io/version: 4.6.3
    helm.sh/chart: jupyterhub-8.1.5
  name: jupyterhub-proxy
  namespace: jupyterhub
spec:
  egress:
    - {}
  ingress:
    - ports:
        - port: 8000
    - ports:
        - port: 8001
  podSelector:
    matchLabels:
      app.kubernetes.io/component: proxy
      app.kubernetes.io/instance: jupyterhub
      app.kubernetes.io/name: jupyterhub
  policyTypes:
    - Ingress
    - Egress
