manifests/dev/jupyterhub/NetworkPolicy-jupyterhub-singleuser.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/component: singleuser
    app.kubernetes.io/instance: jupyterhub
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: jupyterhub
    app.kubernetes.io/version: 4.1.6
    helm.sh/chart: jupyterhub-8.1.5
  name: jupyterhub-singleuser
  namespace: jupyterhub
spec:
  egress:
    - {}
  ingress:
    - ports:
        - port: 8888
  podSelector:
    matchLabels:
      app.kubernetes.io/component: singleuser
      app.kubernetes.io/instance: jupyterhub
      app.kubernetes.io/name: jupyterhub
  policyTypes:
    - Ingress
    - Egress
